Converted CreateDeck, DeleteDeck, CardCreation, FindSentences, and ExtractAudio to be MVC pattern files

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
+# pip install -r [path]/requirements.txt
 Pandas
 PySimpleGUI
 tqdm
 Pillow
-simpleaudio
-moviepy
-ffmpeg-python
-opencv-python
-imageio
+moviepy >= 1.0.3
